# origin

./: .gitignore  Behavior.h  CMakeLists.txt  Charactor.h  Duck.h  FcInputlmpl.h  FlightM300.h  FlightM600.h  FlightMavic.h  FlightSkdio.h  Flights.h  Flybehavior.h  MC_src  MC_src[1]_include.cmake  MC_src[1]_tests.cmake  MissionComputer  MissionComputer.cpp  MissionComputerTest.cpp  MissionComputerTest[1]_include.cmake  MissionComputerTest[1]_tests.cmake  QuackBehavior.h  README.md  ducks.cpp  eNumCollections.h  mytests.cpp  problem1_matrix.cpp  problem1_matrix.h  problem2_makgora.cpp  school.cpp  soEasy.txt
different_api/m300/: CMakeLists.txt
different_api/m300/gps/: gps.cc  gps.h
different_api/m300/navigation/: navigation.cc  navigation.h
different_api/m300/sensor_data/: sensor_data.cc  sensor_data.h
different_api/m300/status/: status.cc  status.h
different_api/m600/: CMakeLists.txt
different_api/m600/gps/: gps.cc  gps.h
different_api/m600/navigation/: navigation.cc  navigation.h
different_api/m600/sensor_data/: sensor_data.cc  sensor_data.h
different_api/m600/status/: status.cc  status.h
different_api/mavic/: CMakeLists.txt
different_api/mavic/gps/: gps.cc  gps.h
different_api/mavic/sensor/: sensor.h
different_api/mavic/sensor/camera_data/: camera_data.cc  camera_data.h
different_api/mavic/sensor/gimbal_data/: gimbal_data.cc  gimbal_data.h
different_api/mavic/sensor/integrated_navigation/: integrated_navigation.cc  integrated_navigation.h
different_api/mavic/sensor/lidar_data/: lidar_data.cc  lidar_data.h
different_api/mavic/sensor/visual_data/: visual_data.cc  visual_data.h
different_api/mavic/status/: status.cc  status.h
different_api/skydio/: CMakeLists.txt
different_api/skydio/camera/: camera.cc  camera.h
different_api/skydio/flight_controller/: flight_controller.cc  flight_controller.h
different_api/skydio/gimbal/: gimbal.cc  gimbal.h
different_api/skydio/gps/: gps.cc  gps.h
different_api/skydio/lidar/: lidar.cc  lidar.h
